fix vertical align complete

--- a/Front/src/styles.css
+++ b/Front/src/styles.css
@@ -14,6 +14,7 @@
 html, body {
     padding: 0px;
     margin: 0px;
+    height: 93%;
     font-size: 15px;
     font-family: var(--font-type)!important;
 }
